--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@
                                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-1"
                                             role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse" id="descricao-card-1"> <br>
+                                        <div class="collapse show" id="descricao-card-1"> <br>
 
                                             <p class="card-text">O projeto compreende uma interface conectada a um banco
-                                                de dados com informações sobre o elenco do Liverpool FC...</p>
+                                                de dados com informações sobre o elenco do Liverpool FC.</p>
 
                                         </div>
 
@@ -477,8 +477,7 @@
 
                                         <div class="collapse" id="descricao-card-2"><br>
 
-                                            <p class="card-text">O projeto de terror apresenta uma interface envolvente,
-                                                destacando os principais personagens fictícios do cinema nesse gênero...</p>
+                                            <p class="card-text">O projeto de terror apresenta uma interface envolvente,destacando os principais personagens fictícios do cinema nesse gênero.</p>
 
                                         </div>
 
@@ -512,7 +511,7 @@
 
                                         <div class="collapse" id="descricao-card-3"> <br>
 
-                                            <p class="card-text">É uma tela interativa para login e cadastro, incorporando animações suaves e um layout adaptável. Proporciona uma experiência dinâmica e fácil de usar, visando a praticidade e a modernidade.</p>
+                                            <p class="card-text">Tela interativa de login e cadastro com animações suaves e layout adaptável, proporcionando uma experiência moderna e prática.</p>
 
                                         </div>
 
@@ -546,7 +545,7 @@
 
                                         <div class="collapse" id="descricao-card-4"> <br>
 
-                                            <p class="card-text">Uma interface interativa e dinâmica, o projeto busca a seleção de personagens do X-men, cada um acompanhado por imagem e descrição.</p>
+                                            <p class="card-text">Interface interativa para selecionar personagens do X-men, com imagens e descrições.</p>
 
                                         </div>
 
@@ -580,7 +579,7 @@
 
                                         <div class="collapse" id="descricao-card-5"> <br>
 
-                                            <p class="card-text">Mini portfólio apresenta uma interface encantadora e responsiva, integrando sutis detalhes de pixel art para uma experiência visual única e atraente. Descubra meu trabalho de forma envolvente.</p>
+                                            <p class="card-text">Mini portfólio com interface encantadora e responsiva, incluindo detalhes de pixel art para uma experiência visual única.</p>
 
                                         </div>
 
@@ -614,7 +613,7 @@
 
                                         <div class="collapse" id="descricao-card-6"> <br>
 
-                                            <p class="card-text">Projeto poético inspirado na canção 'A Vida de um Viajante' de Luiz Gonzaga, apresentando versos em estilo cordel. A experiência é aprimorada por um efeito parallax envolvente.</p>
+                                            <p class="card-text">Poema inspirado na música 'A Vida de um Viajante' de Luiz Gonzaga, apresentando versos em estilo cordel com um efeito parallax envolvente.</p>
 
                                         </div>
 
@@ -648,7 +647,7 @@
 
                                         <div class="collapse" id="descricao-card-7"> <br>
 
-                                            <p class="card-text">Calculadora de IMC, desenvolvida em HTML, CSS e JS, permite aos usuários inserir altura e peso para calcular o índice de massa corporal, proporcionando uma abordagem simples e eficaz.</p>
+                                            <p class="card-text">Calculadora de IMC que aceita entrada de altura e peso para determinar o índice de massa corporal, oferecendo uma solução direta e eficiente.</p>
 
                                         </div>
 
@@ -682,7 +681,7 @@
 
                                         <div class="collapse" id="descricao-card-8"> <br>
 
-                                            <p class="card-text">Contador simples que exibe valores positivos e negativos em resposta a eventos de usuário, proporcionando uma experiência interativa e dinâmica.</p>
+                                            <p class="card-text">Um contador interativo que reage a eventos do usuário, exibindo valores positivos e negativos de maneira dinâmica</p>
 
                                         </div>
 
@@ -707,18 +706,6 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-
-
-
-
-
-
-
-
-
-
-
-
 
                     </div>
 
