--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-1"
                                             role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse show" id="descricao-card-1"> <br>
+                                        <div class="collapse" id="descricao-card-1"> <br>
 
                                             <p class="card-text">O projeto compreende uma interface conectada a um banco
                                                 de dados com informações sobre o elenco do Liverpool FC.</p>
