--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                 <div class="col-md-6">
 
-                    <img id="ilustracao-homepage" src="src/images/ilustracao.svg"
+                    <img class="img-fluid" style="height: 95%; width: 400px;" src="src/images/ilustracao.svg"
                         alt="Personagem da imagem da homepage na mesa">
 
                 </div>
@@ -162,7 +162,7 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <img class="img-fluid" style="height: 100%;" src="src/images/ilustracao-sobre-mim.svg"
+                    <img class="img-fluid fade-in" style="height: 100%;" src="src/images/ilustracao-sobre-mim.svg"
                         alt="Ilustração de um personagem programando">
 
                 </div>
