--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
                         </div>
 
-                        <!-- SEGUNDO CARD / PROJETO TERROR -->
+                        <!----- SEGUNDO CARD / WEBSCRAPING ----->
 
                         <div class="carousel-item">
 
@@ -463,7 +463,41 @@
 
                                 <div class="card">
 
-                                    <img src="src/images/projeto-terror.png" alt="Segundo card" class="card-img-top" class="img-fluid">
+                                    <img src="src/images/webscraping.png" alt="Segundo card"
+                                        class="card-img-top">
+
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Web Scraping de dados climáticos</h5> <br>
+
+                                        <a href="https://github.com/26Tassiofernandes/web-scraping-clima" target="_blank"
+                                            rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-2"
+                                            role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
+
+                                        <div class="collapse" id="descricao-card-2"> <br>
+
+                                            <p class="card-text">Um código que faz uso do Web Scraping com Selenium para extrair dados de um site climático.</p>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <!--  TERCEIRO / PROJETO TERROR -->
+
+                        <div class="carousel-item">
+
+                            <div class="col-12 mx-auto w-50">
+
+                                <div class="card">
+
+                                    <img src="src/images/projeto-terror.png" alt="Terceiro card" class="card-img-top" class="img-fluid">
 
                                     <div class="card-body">
 
@@ -471,11 +505,11 @@
 
                                         <a href="https://26tassiofernandes.github.io/projeto-terror/" target="_blank"
                                             rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
-                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-2"
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-3"
                                             role="button" aria-expanded="false" aria-controls="collapseExample"
                                             style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse" id="descricao-card-2"><br>
+                                        <div class="collapse" id="descricao-card-3"><br>
 
                                             <p class="card-text">O projeto de terror apresenta uma interface envolvente,destacando os principais personagens fictícios do cinema nesse gênero.</p>
 
@@ -489,7 +523,7 @@
 
                         </div>
 
-                        <!---- TERCEIRO CARD / TELA DE LOGIN ---->
+                        <!---- QUARTO / TELA DE LOGIN ---->
 
                         <div class="carousel-item">
 
@@ -497,7 +531,7 @@
 
                                 <div class="card">
 
-                                    <img src="src/images/tela-login-animada.png" alt="Terceiro card" class="card-img-top" class="img-fluid">
+                                    <img src="src/images/tela-login-animada.png" alt="Quarto card" class="card-img-top" class="img-fluid">
 
                                     <div class="card-body">
 
@@ -505,11 +539,11 @@
 
                                         <a href="https://26tassiofernandes.github.io/tela-login-animada/" target="_blank"
                                             rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
-                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-3"
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-4"
                                             role="button" aria-expanded="false" aria-controls="collapseExample"
                                             style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse" id="descricao-card-3"> <br>
+                                        <div class="collapse" id="descricao-card-4"> <br>
 
                                             <p class="card-text">Tela interativa de login e cadastro com animações suaves e layout adaptável, proporcionando uma experiência moderna e prática.</p>
 
@@ -523,7 +557,7 @@
 
                         </div>
 
-                        <!---- QUARTO CARD / PROJETO X-MEN ---->
+                        <!---- QUINTO / PROJETO X-MEN ---->
 
                         <div class="carousel-item">
 
@@ -531,7 +565,7 @@
 
                                 <div class="card">
 
-                                    <img src="src/images/projeto-xmen.png" alt="Quarto card"
+                                    <img src="src/images/projeto-xmen.png" alt="Quinto card"
                                         class="card-img-top">
 
                                     <div class="card-body">
@@ -540,10 +574,10 @@
 
                                         <a href="https://26tassiofernandes.github.io/projeto-x-men/" target="_blank"
                                             rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
-                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-4"
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-5"
                                             role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse" id="descricao-card-4"> <br>
+                                        <div class="collapse" id="descricao-card-5"> <br>
 
                                             <p class="card-text">Interface interativa para selecionar personagens do X-men, com imagens e descrições.</p>
 
@@ -557,7 +591,7 @@
 
                         </div>
                         
-                        <!---- QUINTO CARD / MINI PORTFÓLIO ---->
+                        <!---- SEXTO CARD / MINI PORTFÓLIO ---->
 
                         <div class="carousel-item">
 
@@ -565,7 +599,7 @@
 
                                 <div class="card">
 
-                                    <img src="src/images/mini-portfolio.png" alt="Quinto card"
+                                    <img src="src/images/mini-portfolio.png" alt="Sexto card"
                                         class="card-img-top">
 
                                     <div class="card-body">
@@ -574,10 +608,10 @@
 
                                         <a href="https://26tassiofernandes.github.io/mini-portfolio/" target="_blank"
                                             rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
-                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-5"
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-6"
                                             role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse" id="descricao-card-5"> <br>
+                                        <div class="collapse" id="descricao-card-6"> <br>
 
                                             <p class="card-text">Mini portfólio com interface encantadora e responsiva, incluindo detalhes de pixel art para uma experiência visual única.</p>
 
@@ -591,7 +625,7 @@
 
                         </div>
 
-                        <!---- SEXTO CARD /  PROJETO CORDEL ---->
+                        <!---- SÉTIMO CARD /  PROJETO CORDEL ---->
 
                         <div class="carousel-item">
 
@@ -599,7 +633,7 @@
 
                                 <div class="card">
 
-                                    <img src="src/images/projeto-cordel.png" alt="Sexto card"
+                                    <img src="src/images/projeto-cordel.png" alt="Sétimo card"
                                         class="card-img-top">
 
                                     <div class="card-body">
@@ -608,10 +642,10 @@
 
                                         <a href="https://26tassiofernandes.github.io/projeto-cordel/" target="_blank"
                                             rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
-                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-6"
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-7"
                                             role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse" id="descricao-card-6"> <br>
+                                        <div class="collapse" id="descricao-card-7"> <br>
 
                                             <p class="card-text">Poema inspirado na música 'A Vida de um Viajante' de Luiz Gonzaga, apresentando versos em estilo cordel com um efeito parallax envolvente.</p>
 
@@ -625,7 +659,7 @@
 
                         </div>
 
-                        <!---- SÉTIMO CARD / CALCULADORA DE IMC---->
+                        <!---- OITAVO CARD / CALCULADORA DE IMC---->
 
                         <div class="carousel-item">
 
@@ -633,7 +667,7 @@
 
                                 <div class="card">
 
-                                    <img src="src/images/calculadora-imc.png" alt="Sétimo card"
+                                    <img src="src/images/calculadora-imc.png" alt="Oitavo card"
                                         class="card-img-top">
 
                                     <div class="card-body">
@@ -642,10 +676,10 @@
 
                                         <a href="https://26tassiofernandes.github.io/Calculador-de-IMC/imc.html" target="_blank"
                                             rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
-                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-7"
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-8"
                                             role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse" id="descricao-card-7"> <br>
+                                        <div class="collapse" id="descricao-card-8"> <br>
 
                                             <p class="card-text">Calculadora de IMC que aceita entrada de altura e peso para determinar o índice de massa corporal, oferecendo uma solução direta e eficiente.</p>
 
@@ -659,7 +693,7 @@
 
                         </div>
 
-                        <!---- OITAVO CARD / CONTADOR ---->
+                        <!---- NONO / TROCADOR DE CORES---->
 
                         <div class="carousel-item">
 
@@ -667,7 +701,41 @@
 
                                 <div class="card">
 
-                                    <img src="src/images/contador.png" alt="Oitavo card"
+                                    <img src="" alt="Nono card"
+                                        class="card-img-top">
+
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Trocador de cores</h5> <br>
+
+                                        <a href="https://26tassiofernandes.github.io/TrocadorDeCores/cores.html" target="_blank"
+                                            rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-9"
+                                            role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
+
+                                        <div class="collapse" id="descricao-card-9"> <br>
+
+                                            <p class="card-text">Interface que tem a capacidade de realizar uma alteração dinâmica e suave das cores de fundo da página.</p>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <!---- DÉCIMO / CONTADOR ---->
+
+                        <div class="carousel-item">
+
+                            <div class="col-12 mx-auto w-50">
+
+                                <div class="card">
+
+                                    <img src="src/images/contador.png" alt="Décimo card"
                                         class="card-img-top">
 
                                     <div class="card-body">
@@ -676,10 +744,10 @@
 
                                         <a href="https://26tassiofernandes.github.io/Contador/contador.html" target="_blank"
                                             rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
-                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-8"
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-10"
                                             role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
 
-                                        <div class="collapse" id="descricao-card-8"> <br>
+                                        <div class="collapse" id="descricao-card-10"> <br>
 
                                             <p class="card-text">Um contador interativo que reage a eventos do usuário, exibindo valores positivos e negativos de maneira dinâmica</p>
 
@@ -692,7 +760,6 @@
                             </div>
 
                         </div>
-
 
 
                         <!--- SETAS DO CARROSSEL --->
