--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 
                                 <div class="card">
 
-                                    <img src="" alt="Nono card"
+                                    <img src="src/images/trocador-de-cores.png" alt="Nono card"
                                         class="card-img-top">
 
                                     <div class="card-body">
@@ -750,6 +750,74 @@
                                         <div class="collapse" id="descricao-card-10"> <br>
 
                                             <p class="card-text">Um contador interativo que reage a eventos do usuário, exibindo valores positivos e negativos de maneira dinâmica</p>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <!---- DÉCIMO PRIMEIRO / MÉDIA DO ALUNO ---->
+
+                        <div class="carousel-item">
+
+                            <div class="col-12 mx-auto w-50">
+
+                                <div class="card">
+
+                                    <img src="src/images/media-do-aluno.png" alt="Décimo primeiro card"
+                                        class="card-img-top">
+
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Média do aluno</h5> <br>
+
+                                        <a href="https://26tassiofernandes.github.io/Contador/contador.html" target="_blank"
+                                            rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-11"
+                                            role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
+
+                                        <div class="collapse" id="descricao-card-11"> <br>
+
+                                            <p class="card-text">Um programa que determina a média do aluno e apresenta dados relacionados aos estudos a situação acadêmica.</p>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <!---- DÉCIMO SEGUNDO / SITE MASCOTE ANDROID ---->
+
+                        <div class="carousel-item">
+
+                            <div class="col-12 mx-auto w-50">
+
+                                <div class="card">
+
+                                    <img src="src/images/site-mascote-android.png" alt="Décimo primeiro card"
+                                        class="card-img-top">
+
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Site de curiosidades</h5> <br>
+
+                                        <a href="https://26tassiofernandes.github.io/HistoriadoMascoteDoAndroid/site.html" target="_blank"
+                                            rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-12"
+                                            role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
+
+                                        <div class="collapse" id="descricao-card-12"> <br>
+
+                                            <p class="card-text">Um breve website responsivo contendo curiosidades, semelhante a um site informativo, que narra a história do mascote do Android.</p>
 
                                         </div>
 
@@ -881,11 +949,9 @@
 
             <div class="informacoes-copyright">
 
-                <p class="descricao-footer" style="text-align: center;">Copyright © 2024, Tássio Fernandes. All Rights
-                    Reserved</p>
+                <p class="descricao-footer" style="text-align: center;">Copyright © 2024, Tássio Fernandes. All Rights Reserved</p>
 
             </div>
-
 
         </div>
 
