--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                 <div class="col-md-6">
 
-                    <img class="img-fluid" style="height: 95%; width: 400px;" src="src/images/ilustracao.svg"
+                    <img class="img-fluid" style="height: 95%; width: 450px;" src="src/images/ilustracao-home-page.webp"
                         alt="Personagem da imagem da homepage na mesa">
 
                 </div>
@@ -162,7 +162,7 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <img class="img-fluid fade-in" style="height: 100%;" src="src/images/ilustracao-sobre-mim.svg"
+                    <img class="img-fluid" style="height: 100%;" src="src/images/ilustracao-about-me.webp"
                         alt="Ilustração de um personagem programando">
 
                 </div>
@@ -346,8 +346,8 @@
 
                 <div class="col-md-6">
 
-                    <img class="img-fluid" style="height: 100%; margin-bottom: 100px; width: 480px;"
-                        src="src/images/img-experiencia.svg" alt="Ilustração de um personagem com curriculo na mão">
+                    <img class="img-fluid" style="height: 100%; margin-bottom: 100px; transform: scale(0.5); width: auto;"
+                        src="src/images/list.webp" alt="Ilustração de um personagem com curriculo na mão">
 
                 </div>
 
@@ -862,14 +862,14 @@
 
                 <div class="col-12">
 
-                    <h3 class="contato-title" style="text-align: center; margin-bottom: 60px;"><strong>Contato</strong>
+                    <h3 class="contato-title" style="text-align: center; margin-bottom: 100px;"><strong>Contato</strong>
                     </h3>
 
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6" style="display: flex; justify-content: center; align-items: center; height: 50vh;">
                     <!-- A classe img-fluid deixa a imagem responsiva e adaptável para diferentes tipos de tela -->
-                    <img class="img-fluid" style="margin-bottom: 60px; width: 450px;" src="src/images/contato-img.svg"
+                    <img class="img-fluid" style="margin-bottom: 90px;" src="src/images/ilustracao-contato.webp"
                         alt="Imagem ilustrativa de contato">
 
 
@@ -956,10 +956,6 @@
         </div>
 
     </footer>
-
-
     <script src="src/JS/script.js"></script>
-
 </body>
-
 </html>
