--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <div class="row">
 
-                <div class="col-md-6">
+                <div class="col-md-6" class="informacoes">
 
                     <h1 class="nome">Tássio Fernandes</h1>
                     <p class="descricao-profissao">Desenvolvedor Web</p>
@@ -140,9 +140,9 @@
 
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6" class="informacoes">
 
-                    <img class="img-fluid" style="height: 95%; width: 450px;" src="src/images/ilustracao-home-page.webp"
+                    <img class="img-fluid" style="height: 95%; width: 450px; transform: scale(1.2);" src="src/images/ilustracao-home-page.webp"
                         alt="Personagem da imagem da homepage na mesa">
 
                 </div>
@@ -161,13 +161,13 @@
 
             <div class="row">
 
-                <div class="col-md-6">
+                <div class="col-md-6" class="informacoes">
                     <img class="img-fluid" style="height: 100%;" src="src/images/ilustracao-about-me.webp"
                         alt="Ilustração de um personagem programando">
 
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6" class="informacoes">
                     <h3 class="about-title">Sobre mim</h3>
                     <p class="descricao">Sou um estudante de Bacharelado em Ciência da Computação na Universidade
                         Federal do Amapá (Unifap) e também estagiário de Sistemas no Tribunal de Justiça do Estado do
@@ -344,53 +344,32 @@
 
             <div class="row">
 
-                <div class="col-md-6">
+                <div class="col-12">
 
-                    <img class="img-fluid" style="height: 100%; margin-bottom: 100px; transform: scale(0.5); width: auto;"
-                        src="src/images/list.webp" alt="Ilustração de um personagem com curriculo na mão">
+                    <h3 class="experiencia-title" style="text-align: center;"><strong>Experiência</strong></h3> <br><br>
 
                 </div>
 
-                <div class="col-md-6">
+                <div class="container container-experiencia"> <!-- PRIMEIRO CONTAINER -->
 
-                    <div class="card">
+                    <h3 class="titulo-experiencias"><strong><a href="https://www.linkedin.com/company/tjap-oficial/" target="_blank" rel="external"><i class="bi bi-building-fill"></i>Tribunal de Justiça do Estado do Amapá</a></strong></h3> <br>
+                    <p class="descricao-experiencia"><strong>Função</strong>: Atualmente, estou desempenhando o papel de estagiário de Desenvolvimento Web no Tribunal de Justiça do Estado do Amapá. Minha principal responsabilidade é contribuir para o desenvolvimento e implementação de aplicações e soluções tecnológicas utilizando tecnologias web e práticas de programação modernas que atendam às demandas específicas da empresa.</p>
+                    <p class="descricao-experiencia"><strong>Competências</strong>: API REST · JPA (Java Persistence API) · Postman API ·
+                        Algoritmos · Programação (computação) · SQL · Java · Banco de dados</p>
+                    <p class="descricao-experiencia"><i class="fas fa-check"></i>2023 - Presente</p>
 
-                        <div class="card-body">
+                </div>
 
-                            <!-- TJAP -->
 
-                            <h3 class="experiencia-title"><strong>Experiência</strong></h3>
-                            <li class="card-text"><i class="fas fa-check"></i><strong>2023 - Presente</strong></li>
-                            <p class="descricao-experiencia"
-                                style="padding-left: 10px; text-decoration: underline; cursor: pointer; font-size: 18px;">
-                                Tribunal de Justiça do Estado do Amapá</p>
-                            <p class="descricao-experiencia" style="padding-left: 10px;">- <strong>Função</strong>: Atua
-                                como Estagiário de Desenvolvimento Web no Tribunal de Justiça do Estado do Amapá,
-                                promovendo soluções tecnológicas voltadas às demandas da empresa.</p>
-                            <p class="descricao-experiencia" style="padding-left: 10px;">-
-                                <strong>Competências</strong>: API REST · JPA (Java Persistence API) · Postman API ·
-                                Algoritmos · Programação (computação) · SQL · Java · Banco de dados
-                            </p>
-                            <br>
+                <div class="container container-experiencia"> <!-- SEGUNDO CONTAINER -->
 
-                            <!-- UNIFAP -->
-
-                            <li class="card-text"><i class="fas fa-check"></i><strong>2021 - Presente</strong></li>
-                            <p class="descricao-experiencia"
-                                style="padding-left: 10px; text-decoration: underline; cursor: pointer; font-size: 18px;">
-                                Universidade Federal do Amapá</p>
-                            <p class="descricao-experiencia" style="padding-left: 10px;">- <strong>Função</strong>: Atua
-                                como estudante de Bacharelado em Ciência da Computação na Unifap, atualmente está no 8°
-                                semestre.</p>
-                            <p class="descricao-experiencia" style="padding-left: 10px;">-
-                                <strong>Competências</strong>: Programação · Desenvolvimento de Software · Banco de
-                                Dados · Redes de Computadores · Sistemas Operacionais · IA e Machine Learning ·
-                                Computação em Nuvem · Gerenciamento de Projetos
-                            </p>
-
-                        </div>
-
-                    </div>
+                    <h2 class="titulo-experiencias"><strong><a href="https://www.linkedin.com/company/universidade-federal-do-amapá-unifap/" target="_blank" rel="external">Universidade Federal do Amapá</a></strong></h2> <br>
+                    <p class="descricao-experiencia"><strong>Função</strong>: Atua como estudante de Bacharelado em Ciência da Computação na Unifap, atualmente está no 8°
+                    semestre.</p>
+                    <p class="descricao-experiencia"><strong>Competências</strong>: Programação · Desenvolvimento de Software · Banco de
+                        Dados · Redes de Computadores · Sistemas Operacionais · IA e Machine Learning ·
+                        Computação em Nuvem · Gerenciamento de Projetos</p>
+                    <p class="descricao-experiencia"><i class="fas fa-check"></i>2021 - Presente</p>
 
                 </div>
 
